[package]
name = "fasthtcacheclean"
version = "0.2.0"
edition = "2021"
authors = ["Christoph Grenz (Papoo Software & Media GmbH) <info@papoo.de>"]
description = "A faster Apache disk cache cleaner"
keywords = ["apache", "httpd", "htcacheclean", "mod_cache_disk"]
categories = ["command-line-utilities"]
# license = "..."

[features]
default = ["systemd"]
systemd = ["systemd-journal-logger"]

[dependencies]
clap = { version = "3.2", features = ["derive"] }
thiserror = "1.0"
nix = { version = "0.24.0", default-features = false, features = ["fs"] }
libc = "0.2"
crossbeam = "0.8"
rand = "0.8"
log = "0.4.6"
num_cpus = "1.13"
env_logger = "0.9.0"
systemd-journal-logger = { version = "0.5.0", optional = true }

[profile.release]
lto = true
codegen-units = 1
