# Copyright (c) 2022 Christoph Grenz (Papoo Software & Media GmbH) <info@papoo.de>
# SPDX-License-Identifier: LGPL-3.0-or-later

[package]
name = "fasthtcacheclean"
version = "0.3.0"
edition = "2021"
authors = ["Papoo Software & Media GmbH <info@papoo.de>"]
description = "A faster Apache disk cache cleaner"
keywords = ["apache", "httpd", "htcacheclean", "mod_cache_disk"]
categories = ["command-line-utilities"]
license = "LGPL-3.0-or-later"

[features]
default = ["systemd"]
systemd = ["tracing-journald"]

[dependencies]
clap = { version = "4.0", features = ["derive"] }
thiserror = "1.0"
nix = { version = "0.24.0", default-features = false, features = ["fs"] }
libc = "0.2"
crossbeam = "0.8"
rand = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
num_cpus = "1.15"
tracing-journald = { version = "0.3.0", optional = true }

[build-dependencies]
clap = { version = "4.0", features = ["derive"] }
clap_mangen = "0.2"
thiserror = "1.0"
copy_to_output = "2.0"

[profile.release]
lto = true
codegen-units = 1

[package.metadata.deb]
maintainer-scripts = "debian/"
systemd-units = { enable = true, start = true, stop-on-upgrade = false, restart-after-upgrade = false }
assets = [
	["target/release/fasthtcacheclean", "/usr/bin/fasthtcacheclean", "755"],
	["target/release/fasthtcacheclean.8", "/usr/share/man/man8/fasthtcacheclean.8", "644"],
]
section = "httpd"
enhances = "apache2"
extended-description = """\
It is primarily designed for disk caches on a separate partition or RAM disk
and faster in cleaning the disk cache. Daemon mode is currently not supported.
It will run periodically via a systemd timer."""
